trying to update migration
Signed-off-by: Nick Papior <nickpapior@gmail.com>

--- a/.ci_support/osx_.yaml
+++ b/.ci_support/osx_.yaml
@@ -4,6 +4,7 @@ c_compiler:
 - toolchain_c
 fortran_compiler:
 - toolchain_fort
+- libgfortran
 macos_machine:
 - x86_64-apple-darwin13.4.0
 macos_min_version:
