--- a/.ci_support/linux_.yaml
+++ b/.ci_support/linux_.yaml
@@ -3,11 +3,11 @@ c_compiler:
 fortran_compiler:
 - toolchain_fort
 netcdf_fortran:
-- '4.4'
+- 4.4.4
 openblas:
 - 0.3.1
 pin_run_as_build:
   netcdf-fortran:
-    max_pin: x.x
+    max_pin: x.x.x
   openblas:
     max_pin: x.x.x
