--- a/.ci_support/osx_.yaml
+++ b/.ci_support/osx_.yaml
@@ -10,11 +10,11 @@ macos_machine:
 macos_min_version:
 - '10.9'
 netcdf_fortran:
-- '4.4'
+- 4.4.4
 openblas:
 - 0.3.1
 pin_run_as_build:
   netcdf-fortran:
-    max_pin: x.x
+    max_pin: x.x.x
   openblas:
     max_pin: x.x.x
