adding more utilities and trying to fix test dirs
Signed-off-by: Nick Papior <nickpapior@gmail.com>

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -38,6 +38,10 @@ requirements:
     - netcdf-fortran
     - scalapack
 
+test:
+  source_files:
+    - Tests/**
+
 about:
   home: https://launchpad.net/siesta/
   license: GPL-3
