--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -32,6 +32,7 @@ requirements:
     - netcdf-fortran
     - scalapack
   run:
+    - ssh
     - {{ mpi }}
     - blas 1.1 {{ blas_variant }}
     - openblas
