--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -18,7 +18,6 @@ source:
 build:
   number: 3
   skip: true  # [win]
-  features:
 
 requirements:
   build:
@@ -32,6 +31,8 @@ requirements:
     - scalapack
   run:
     - ssh
+    - libblas
+    - libcblas
     - {{ mpi }}
     - netcdf-fortran
     - scalapack
