--- a/.ci_support/linux_blas_implblismpiopenmpi.yaml
+++ b/.ci_support/linux_blas_implblismpiopenmpi.yaml
@@ -1,3 +1,5 @@
+blas_impl:
+- blis
 c_compiler:
 - gcc
 c_compiler_version:
@@ -12,10 +14,8 @@ fortran_compiler:
 - gfortran
 fortran_compiler_version:
 - '7'
-libblas:
-- 3.8 *netlib
-libcblas:
-- 3.8 *netlib
+liblapack:
+- 3.8.0 *netlib
 mpi:
 - openmpi
 netcdf_fortran:
