--- a/.ci_support/osx_blas_implmklmpimpich.yaml
+++ b/.ci_support/osx_blas_implmklmpimpich.yaml
@@ -1,5 +1,7 @@
 MACOSX_DEPLOYMENT_TARGET:
 - '10.9'
+blas_impl:
+- mkl
 c_compiler:
 - clang
 c_compiler_version:
@@ -12,16 +14,14 @@ fortran_compiler:
 - gfortran
 fortran_compiler_version:
 - '4'
-libblas:
-- 3.8 *netlib
-libcblas:
-- 3.8 *netlib
+liblapack:
+- 3.8.0 *netlib
 macos_machine:
 - x86_64-apple-darwin13.4.0
 macos_min_version:
 - '10.9'
 mpi:
-- openmpi
+- mpich
 netcdf_fortran:
 - '4.4'
 pin_run_as_build:
