--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -14,8 +14,12 @@ source:
   md5: {{ md5 }}
   sha256: {{ sha256 }}
 
-# Define build matrix for MPI vs. non-mpi
+# Default build version to be stepped with every new build!
 {% set build = 4 %}
+
+# Define build matrix for MPI vs. non-mpi
+## ensure mpi is defined (needed for conda-smithy recipe-lint)
+{% set mpi = mpi or 'nompi' %}
 {% if mpi == 'nompi' %}
 # prioritize nompi variant via build number
 {% set build = build + 1000 %}
