--- a/.azure-pipelines/azure-pipelines-linux.yml
+++ b/.azure-pipelines/azure-pipelines-linux.yml
@@ -13,17 +13,26 @@ jobs:
       linux_blas_implblismpimpich:
         CONFIG: linux_blas_implblismpimpich
         UPLOAD_PACKAGES: True
+      linux_blas_implblismpinompi:
+        CONFIG: linux_blas_implblismpinompi
+        UPLOAD_PACKAGES: True
       linux_blas_implblismpiopenmpi:
         CONFIG: linux_blas_implblismpiopenmpi
         UPLOAD_PACKAGES: True
       linux_blas_implmklmpimpich:
         CONFIG: linux_blas_implmklmpimpich
         UPLOAD_PACKAGES: True
+      linux_blas_implmklmpinompi:
+        CONFIG: linux_blas_implmklmpinompi
+        UPLOAD_PACKAGES: True
       linux_blas_implmklmpiopenmpi:
         CONFIG: linux_blas_implmklmpiopenmpi
         UPLOAD_PACKAGES: True
       linux_blas_implopenblasmpimpich:
         CONFIG: linux_blas_implopenblasmpimpich
+        UPLOAD_PACKAGES: True
+      linux_blas_implopenblasmpinompi:
+        CONFIG: linux_blas_implopenblasmpinompi
         UPLOAD_PACKAGES: True
       linux_blas_implopenblasmpiopenmpi:
         CONFIG: linux_blas_implopenblasmpiopenmpi
