MNT: Re-rendered with conda-build 3.18.9, conda-smithy 3.4.1, and conda-forge-pinning 2019.08.27

--- a/.ci_support/osx_fortran_compiler_version4mpinompi.yaml
+++ b/.ci_support/osx_fortran_compiler_version4mpinompi.yaml
@@ -1,7 +1,5 @@
 MACOSX_DEPLOYMENT_TARGET:
 - '10.9'
-blas_impl:
-- mkl
 c_compiler:
 - clang
 c_compiler_version:
@@ -21,7 +19,7 @@ macos_machine:
 macos_min_version:
 - '10.9'
 mpi:
-- mpich
+- nompi
 netcdf_fortran:
 - '4.4'
 pin_run_as_build:
