--- a/.ci_support/linux_mpiopenmpi.yaml
+++ b/.ci_support/linux_mpiopenmpi.yaml
@@ -1,27 +1,21 @@
-MACOSX_DEPLOYMENT_TARGET:
-- '10.9'
-blas_impl:
-- openblas
 c_compiler:
-- clang
+- gcc
 c_compiler_version:
-- '4'
+- '7'
 channel_sources:
 - conda-forge,defaults
 channel_targets:
 - conda-forge main
+docker_image:
+- condaforge/linux-anvil-comp7
 fortran_compiler:
 - gfortran
 fortran_compiler_version:
 - '7'
 liblapack:
 - 3.8.0 *netlib
-macos_machine:
-- x86_64-apple-darwin13.4.0
-macos_min_version:
-- '10.9'
 mpi:
-- mpich
+- openmpi
 netcdf_fortran:
 - '4.4'
 pin_run_as_build:
