--- a/.ci_support/osx_fortran_compiler_version4mpimpich.yaml
+++ b/.ci_support/osx_fortran_compiler_version4mpimpich.yaml
@@ -1,23 +1,25 @@
-blas_impl:
-- mkl
+MACOSX_DEPLOYMENT_TARGET:
+- '10.9'
 c_compiler:
-- gcc
+- clang
 c_compiler_version:
-- '7'
+- '4'
 channel_sources:
 - conda-forge,defaults
 channel_targets:
 - conda-forge main
-docker_image:
-- condaforge/linux-anvil-comp7
 fortran_compiler:
 - gfortran
 fortran_compiler_version:
-- '7'
+- '4'
 liblapack:
 - 3.8.0 *netlib
+macos_machine:
+- x86_64-apple-darwin13.4.0
+macos_min_version:
+- '10.9'
 mpi:
-- nompi
+- mpich
 netcdf_fortran:
 - '4.4'
 pin_run_as_build:
