trying to do sequential backtracing
Signed-off-by: Nick Papior <nickpapior@gmail.com>

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -64,6 +64,9 @@ requirements:
 test:
   source_files:
     - Tests/**
+  command:
+    - conda inspect linkages -p $PREFIX siesta
+    - conda inspect objects -p $PREFIX siesta
 
 about:
   home: https://launchpad.net/siesta/
