fixing env-vars
Signed-off-by: zerothi <nickpapior@gmail.com>

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -64,7 +64,7 @@ requirements:
 test:
   source_files:
     - Tests/**
-  command:
+  commands:
     - conda inspect linkages -p $PREFIX siesta
     - conda inspect objects -p $PREFIX siesta
 
