added ldd check
Signed-off-by: zerothi <nickpapior@gmail.com>

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -56,9 +56,9 @@ requirements:
   run:
     - liblapack
     - {{ mpi }}  # [mpi != 'nompi']
-    - {{ pin_compatible('hdf5') }}
-    - {{ pin_compatible('libnetcdf') }}
-    - {{ pin_compatible('netcdf-fortran') }}
+    - hdf5
+    - libnetcdf
+    - netcdf-fortran
     - scalapack  # [mpi != 'nompi']
 
 test:
