--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -15,13 +15,15 @@ source:
   sha256: {{ sha256 }}
 
 # Default build version to be stepped with every new build!
-{% set build = 4 %}
+{% set build = 5 %}
 
 # Define build matrix for MPI vs. non-mpi
 ## ensure mpi is defined (needed for conda-smithy recipe-lint)
 {% set mpi = mpi or 'nompi' %}
 {% if mpi == 'nompi' %}
 # prioritize nompi variant via build number
+# this is 100 in the docs and should be changed to that
+# for the next version bump
 {% set build = build + 1000 %}
 {% endif %}
 
