trying to add libblas as dependency
Signed-off-by: zerothi <nickpapior@gmail.com>

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -43,10 +43,11 @@ build:
 
 requirements:
   build:
-    - {{ compiler('fortran') }}
     - {{ compiler('c') }}
+    - {{ compiler('fortran') }}
     - conda-verify
   host:
+    - libblas
     - liblapack
     - {{ mpi }}  # [mpi != 'nompi']
     - hdf5
@@ -54,6 +55,7 @@ requirements:
     - netcdf-fortran
     - scalapack  # [mpi != 'nompi']
   run:
+    - libblas
     - liblapack
     - {{ mpi }}  # [mpi != 'nompi']
     - hdf5
