--- a/.ci_support/linux_blas_implmklmpimpich.yaml
+++ b/.ci_support/linux_blas_implmklmpimpich.yaml
@@ -14,12 +14,22 @@ fortran_compiler:
 - gfortran
 fortran_compiler_version:
 - '7'
+hdf5:
+- 1.10.5
 liblapack:
 - 3.8.0 *netlib
+libnetcdf:
+- 4.7.1
 mpi:
 - mpich
 netcdf_fortran:
 - '4.4'
 pin_run_as_build:
+  libnetcdf:
+    max_pin: x.x.x
   netcdf-fortran:
     max_pin: x.x
+  zlib:
+    max_pin: x.x
+zlib:
+- '1.2'
