--- a/.ci_support/osx_blas_implopenblasmpinompi.yaml
+++ b/.ci_support/osx_blas_implopenblasmpinompi.yaml
@@ -5,7 +5,7 @@ blas_impl:
 c_compiler:
 - clang
 c_compiler_version:
-- '4'
+- '9'
 channel_sources:
 - conda-forge,defaults
 channel_targets:
@@ -13,9 +13,13 @@ channel_targets:
 fortran_compiler:
 - gfortran
 fortran_compiler_version:
-- '4'
+- '7'
+hdf5:
+- 1.10.5
 liblapack:
 - 3.8.0 *netlib
+libnetcdf:
+- 4.7.1
 macos_machine:
 - x86_64-apple-darwin13.4.0
 macos_min_version:
@@ -25,5 +29,11 @@ mpi:
 netcdf_fortran:
 - '4.4'
 pin_run_as_build:
+  libnetcdf:
+    max_pin: x.x.x
   netcdf-fortran:
     max_pin: x.x
+  zlib:
+    max_pin: x.x
+zlib:
+- '1.2'
