--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,7 +1,6 @@
 {% set name = "siesta" %}
 {% set version_base = "4.0" %}
 {% set version = "4.0.2" %}
-{% set md5 = "5f6d1c2ffb96c58bb45c5d76b6bb4bb2" %}
 {% set sha256 = "bafbda19358f0c1dd39bb1253c92ee548791a1c0f648977051d2657216874f7e" %}
 
 package:
@@ -11,11 +10,13 @@ package:
 source:
   fn: {{ name }}-{{ version }}.tar.gz
   url: https://launchpad.net/{{ name }}/{{ version_base }}/{{ version }}/+download/{{ name }}-{{ version }}.tar.gz
-  md5: {{ md5 }}
   sha256: {{ sha256 }}
 
 # Default build version to be stepped with every new build!
 {% set build = 5 %}
+
+## ensure blas_impl is defined (needed for conda-smithy recipe-lint)
+{% set blas_impl = blas_impl or 'openblas' %}
 
 # Define build matrix for MPI vs. non-mpi
 ## ensure mpi is defined (needed for conda-smithy recipe-lint)
@@ -46,6 +47,7 @@ requirements:
     - {{ compiler('fortran') }}
     - {{ compiler('c') }}
   host:
+    - libblas * *{{ blas_impl }}
     - {{ blas_impl }}
     - liblapack
     - {{ mpi }}  # [mpi != 'nompi']
