--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -48,6 +48,7 @@ requirements:
     - liblapack
     - {{ mpi }}  # [mpi != 'nompi']
     - netcdf-cxx4
+    - netcdf-fortran
     - scalapack  # [mpi != 'nompi']
   run:
     - libblas * *{{ blas_impl }}
@@ -55,6 +56,7 @@ requirements:
     - liblapack
     - {{ mpi }}  # [mpi != 'nompi']
     - netcdf-cxx4
+    - netcdf-fortran
     - scalapack  # [mpi != 'nompi']
 
 test:
