--- a/.ci_support/linux_mpimpich.yaml
+++ b/.ci_support/linux_mpimpich.yaml
@@ -1,29 +1,33 @@
-MACOSX_DEPLOYMENT_TARGET:
-- '10.9'
-blas_impl:
-- mkl
 c_compiler:
-- clang
+- gcc
 c_compiler_version:
-- '4'
+- '7'
 channel_sources:
 - conda-forge,defaults
 channel_targets:
 - conda-forge main
+docker_image:
+- condaforge/linux-anvil-comp7
 fortran_compiler:
 - gfortran
 fortran_compiler_version:
-- '4'
+- '7'
+hdf5:
+- 1.10.5
+libblas:
+- 3.8 *netlib
 liblapack:
 - 3.8.0 *netlib
-macos_machine:
-- x86_64-apple-darwin13.4.0
-macos_min_version:
-- '10.9'
+libnetcdf:
+- 4.7.4
 mpi:
 - mpich
 netcdf_fortran:
-- '4.4'
+- '4.5'
 pin_run_as_build:
   netcdf-fortran:
     max_pin: x.x
+  zlib:
+    max_pin: x.x
+zlib:
+- '1.2'
