--- a/.ci_support/linux_mpiopenmpi.yaml
+++ b/.ci_support/linux_mpiopenmpi.yaml
@@ -1,5 +1,3 @@
-blas_impl:
-- openblas
 c_compiler:
 - gcc
 c_compiler_version:
@@ -14,12 +12,22 @@ fortran_compiler:
 - gfortran
 fortran_compiler_version:
 - '7'
+hdf5:
+- 1.10.5
+libblas:
+- 3.8 *netlib
 liblapack:
 - 3.8.0 *netlib
+libnetcdf:
+- 4.7.4
 mpi:
-- nompi
+- openmpi
 netcdf_fortran:
-- '4.4'
+- '4.5'
 pin_run_as_build:
   netcdf-fortran:
     max_pin: x.x
+  zlib:
+    max_pin: x.x
+zlib:
+- '1.2'
