--- a/.ci_support/osx_mpimpich.yaml
+++ b/.ci_support/osx_mpimpich.yaml
@@ -1,25 +1,37 @@
-blas_impl:
-- blis
+MACOSX_DEPLOYMENT_TARGET:
+- '10.9'
 c_compiler:
-- gcc
+- clang
 c_compiler_version:
-- '7'
+- '9'
 channel_sources:
 - conda-forge,defaults
 channel_targets:
 - conda-forge main
-docker_image:
-- condaforge/linux-anvil-comp7
 fortran_compiler:
 - gfortran
 fortran_compiler_version:
 - '7'
+hdf5:
+- 1.10.5
+libblas:
+- 3.8 *netlib
 liblapack:
 - 3.8.0 *netlib
+libnetcdf:
+- 4.7.4
+macos_machine:
+- x86_64-apple-darwin13.4.0
+macos_min_version:
+- '10.9'
 mpi:
-- openmpi
+- mpich
 netcdf_fortran:
-- '4.4'
+- '4.5'
 pin_run_as_build:
   netcdf-fortran:
     max_pin: x.x
+  zlib:
+    max_pin: x.x
+zlib:
+- '1.2'
