--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,7 +1,7 @@
 {% set name = "siesta" %}
-{% set version_base = "4.0" %}
-{% set version = "4.0.2" %}
-{% set md5 = "5f6d1c2ffb96c58bb45c5d76b6bb4bb2" %}
+{% set siesta_version = "4.1-b4" %}
+{% set version_base = siesta_version.split("-b")[0] %}
+{% set version = version_base + "." + siesta_version.split("-b")[1] %}
 {% set sha256 = "bafbda19358f0c1dd39bb1253c92ee548791a1c0f648977051d2657216874f7e" %}
 
 package:
@@ -9,13 +9,12 @@ package:
   version: {{ version }}
 
 source:
-  fn: {{ name }}-{{ version }}.tar.gz
-  url: https://launchpad.net/{{ name }}/{{ version_base }}/{{ version }}/+download/{{ name }}-{{ version }}.tar.gz
-  md5: {{ md5 }}
+  fn: {{ name }}-{{ siesta_version }}.tar.gz
+  url: https://launchpad.net/{{ name }}/{{ version_base }}/{{ siesta_version }}/+download/{{ name }}-{{ siesta_version }}.tar.gz
   sha256: {{ sha256 }}
 
 # Default build version to be stepped with every new build!
-{% set build = 4 %}
+{% set build = 0 %}
 
 # Define build matrix for MPI vs. non-mpi
 ## ensure mpi is defined (needed for conda-smithy recipe-lint)
@@ -53,7 +52,7 @@ requirements:
     - netcdf-fortran
     - scalapack  # [mpi != 'nompi']
   run:
-    - ssh
+    - libssh2
     - libblas * *{{ blas_impl }}
     - {{ blas_impl }}
     - liblapack
