--- a/.ci_support/osx_blas_implblismpimpich.yaml
+++ b/.ci_support/osx_blas_implblismpimpich.yaml
@@ -16,6 +16,8 @@ fortran_compiler_version:
 - '7'
 liblapack:
 - 3.8.0 *netlib
+libnetcdf:
+- 4.7.4
 macos_machine:
 - x86_64-apple-darwin13.4.0
 macos_min_version:
