--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -47,29 +47,31 @@ requirements:
     - libblas
     - liblapack
     - {{ mpi }}  # [mpi != 'nompi']
-    - netcdf-fortran
+    - zlib
+    - fox
+    - scalapack  # [mpi != 'nompi']
     # need to list hdf5, libnetcdf and netcdf-fortran twice to get version
     # pinning from conda_build_config and build pinning from {{ mpi_prefix }}
     - hdf5
     - hdf5 * {{ mpi_prefix }}_*
     - libnetcdf
     - libnetcdf * {{ mpi_prefix }}_*
-    - zlib
-    - fox
-    - scalapack  # [mpi != 'nompi']
+    - netcdf-fortran
+    - netcdf-fortran * {{ mpi_prefix }}_*
   run:
     - libssh2
     - {{ mpi }}  # [mpi != 'nompi']
-    - netcdf-fortran
+    - zlib
+    - fox
+    - scalapack  # [mpi != 'nompi']
     # need to list hdf5, libnetcdf and netcdf-fortran twice to get version
     # pinning from conda_build_config and build pinning from {{ mpi_prefix }}
     - hdf5
     - hdf5 * {{ mpi_prefix }}_*
     - libnetcdf
     - libnetcdf * {{ mpi_prefix }}_*
-    - zlib
-    - fox
-    - scalapack  # [mpi != 'nompi']
+    - netcdf-fortran
+    - netcdf-fortran * {{ mpi_prefix }}_*
 
 test:
   source_files:
