--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -54,11 +54,11 @@ requirements:
     # need to list hdf5, libnetcdf and netcdf-fortran twice to get version
     # pinning from conda_build_config and build pinning from {{ mpi_prefix }}
     - hdf5
-    - hdf5 * {{ mpi_prefix }}_*
+    - hdf5 * {{ mpi_prefix }}_*  # [mpi != 'nompi']
     - libnetcdf
-    - libnetcdf * {{ mpi_prefix }}_*
+    - libnetcdf * {{ mpi_prefix }}_*  # [mpi != 'nompi']
     - netcdf-fortran
-    - netcdf-fortran * {{ mpi_prefix }}_*
+    - netcdf-fortran * {{ mpi_prefix }}_*  # [mpi != 'nompi']
   run:
     - {{ mpi }}  # [mpi != 'nompi']
     - zlib
@@ -67,11 +67,11 @@ requirements:
     # need to list hdf5, libnetcdf and netcdf-fortran twice to get version
     # pinning from conda_build_config and build pinning from {{ mpi_prefix }}
     - hdf5
-    - hdf5 * {{ mpi_prefix }}_*
+    - hdf5 * {{ mpi_prefix }}_*  # [mpi != 'nompi']
     - libnetcdf
-    - libnetcdf * {{ mpi_prefix }}_*
+    - libnetcdf * {{ mpi_prefix }}_*  # [mpi != 'nompi']
     - netcdf-fortran
-    - netcdf-fortran * {{ mpi_prefix }}_*
+    - netcdf-fortran * {{ mpi_prefix }}_*  # [mpi != 'nompi']
 
 test:
   source_files:
