--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -60,6 +60,7 @@ requirements:
     - libnetcdf * {{ mpi_prefix }}_*
     - netcdf-fortran
     - netcdf-fortran * {{ mpi_prefix }}_*
+    - fftw
   run:
     - {{ mpi }}  # [mpi != 'nompi']
     - zlib
@@ -68,6 +69,7 @@ requirements:
     - hdf5 * {{ mpi_prefix }}_*
     - libnetcdf * {{ mpi_prefix }}_*
     - netcdf-fortran * {{ mpi_prefix }}_*
+    - fftw
 
 test:
   source_files:
