--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -76,7 +76,7 @@ test:
 
 about:
   home: https://gitlab.com/siesta-project
-  license: GPL-3
+  license: GPL-3.0-or-later
   license_family: GPL
   license_file: COPYING
   summary: A first-principles materials simulation code using DFT
