trying to fix meta
Signed-off-by: zerothi <nickpapior@gmail.com>

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -38,13 +38,11 @@ build:
 
   string: "{{ mpi_prefix }}_h{{ PKG_HASH }}_{{ build }}"
 
-  run_exports:
-    - {{ name }}
-
 requirements:
   build:
     - {{ compiler('fortran') }}
     - {{ compiler('c') }}
+    - openmpi-mpifort  # [mpi == 'openmpi']
     - make  # [not win]
   host:
     - libblas
