added bot (for future branching to 5)
Signed-off-by: zerothi <nickpapior@gmail.com>

--- a/conda-forge.yml
+++ b/conda-forge.yml
@@ -8,3 +8,8 @@ github:
   tooling_branch_name: main
 conda_build:
   pkg_format: '2'
+bot:
+  abi_migration_branches:
+    - main
+    - v4.1.x
+    # no v4.0.x
