moved to rc label
Signed-off-by: zerothi <nickpapior@gmail.com>

--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -2,3 +2,7 @@ mpi:
   - nompi
   - mpich  # [unix]
   - openmpi  # [unix]
+
+channel_targets:
+  # Remove this for proper releases
+  - conda-forge siesta_rc
