--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,22 +1,20 @@
 {% set name = "siesta" %}
-{% set siesta_version = "4.0.2" %}
-{% set version = siesta_version.split("-b")[0] %}
-{% set sha256 = "04300ba77a32d0ba2844d704e1c404d1417bd8c1ab76dba9d19f074076d9bc18" %}
+{% set siesta_version = "5.0.0-beta1" %}
+# This changes the X.Y.Z-betaW to X.Y.ZrcW
+{% set version = "rc".join(siesta_version.replace("beta", "b").split("-b")) %}
+{% set sha256 = "fdc03d224b07c55cfad629958901e7008bc3a1973c3ee7749bc2310671f49ac2" %}
 
 package:
   name: {{ name }}
   version: {{ version }}
 
 source:
-  fn: {{ name }}-v{{ siesta_version }}.tar.bz2
-  url: https://gitlab.com/siesta-project/{{ name }}/-/archive/v{{ siesta_version }}/siesta-v{{ siesta_version }}.tar.bz2
+  fn: {{ name }}-{{ siesta_version }}.tar.gz
+  url: https://gitlab.com/siesta-project/siesta/-/releases/{{ siesta_version }}/downloads/siesta-{{ siesta_version }}.tar.gz
   sha256: {{ sha256 }}
-  patches:
-    # make version.o a phony target
-    - patches/makefile_conda-clean.patch
 
 # Default build version to be stepped with every new build!
-{% set build = 13 %}
+{% set build = 0 %}
 
 # Define build matrix for MPI vs. non-mpi
 ## ensure mpi is defined (needed for conda-smithy recipe-lint)
@@ -42,13 +40,16 @@ requirements:
   build:
     - {{ compiler('fortran') }}
     - {{ compiler('c') }}
-    - openmpi-mpifort  # [mpi == 'openmpi']
     - make  # [not win]
+    - git
+    - cmake
+    - pkg-config
   host:
     - libblas
     - liblapack
     - {{ mpi }}  # [mpi != 'nompi']
     - scalapack  # [mpi != 'nompi']
+    - libxc >6.0
     # need to list hdf5, libnetcdf and netcdf-fortran twice to get version
     # pinning from conda_build_config and build pinning from {{ mpi_prefix }}
     - hdf5
@@ -60,6 +61,7 @@ requirements:
   run:
     - {{ mpi }}  # [mpi != 'nompi']
     - scalapack  # [mpi != 'nompi']
+    - libxc >6.0
     - hdf5 * {{ mpi_prefix }}_*
     - libnetcdf * {{ mpi_prefix }}_*
     - netcdf-fortran * {{ mpi_prefix }}_*
